<resources>
    <!--로그인-->
    <string name="app_name">밥친구함</string>
    <string name="main_list">List</string>
    <string name="main_auto_login">자동 로그인</string>
    <string name="main_map">Map</string>
    <string name="list_search">글 제목, 내용, 장소, 시간을 검색하세요.</string>
    <string name="map_search">장소를 검색하세요.</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="registerBtn">이메일 회원가입</string>
    <string name="Loading">Loading</string>
    <string name="login_explain">회원가입 후 로그인 방법</string>
    <string name="login_explain2">이메일(아이디) 칸에 입력했던 이메일로 확인 url이 발송됩니다. 링크로 접속하여 사용자 확인이 완료되기 전까지는 로그인이 되지 않습니다. 로그인을 하기 전 이메일을 확인해주시길 바랍니다. 확인하셨다면 다음버튼을 눌러주십시오.</string>
    <string name="login_next">확인했습니다</string>

    <!-- 아이디/비밀번호 찾기 -->
    <string name="FindIDPassword">아이디/비밀번호 찾기</string>
    <string name="findIDBtn">아이디 검색</string>
    <string name="changePasswordBtn">비밀번호 재발급</string>
    <string name="findExplain">저희 "밥친구함" 서비스에서는 아이디 검색을 통해 해당 아이디가 존재하는지 알 수 있고, 아이디와 회원가입 당시 입력 받은 생년월일로 비밀번호를 재발급 받을 수 있습니다.</string>

    <!--회원가입-->
    <string name="userId">이메일(아이디)</string>
    <string name="userEmailBtn">중복확인</string>
    <string name="userPassword">비밀번호</string>
    <string name="userPasswordCheck">비밀번호 확인</string>
    <string name="userName">이름(닉네임)</string>
    <string name="email">이메일</string>
    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="thirdGender">비공개</string>
    <string name="userDateOfBirth">생년월일(ex 20001216)</string>

    <string name="userId2">아이디를 입력해주세요.</string>
    <string name="userPassword2">비밀번호</string>
    <string name="userPasswordCheck2">비밀번호 확인</string>
    <string name="userName2">닉네임을 입력하세요.</string>
    <string name="userEmail">이메일을 입력해주세요.</string>
    <string name="userDateOfBirth2">Ex)20001212</string>

    <string name="allAgree">모두 동의합니다.</string>
    <string name="termsAndConditionsAgree">서비스 이용약관 동의</string>
    <string name="personalInformationAgree">개인정보 수집 및 이용 동의</string>
    <string name="locationInformationAgree">위치정보 서비스 이용약관 동의</string>
    <string name="marketingAgree">만 14세 미만의 사용자가 아닙니다</string>


    <!--글쓰기-->
    <string name="write_board">약속 작성하기</string>
    <string name="write_board_ok">확인</string>
    <string name="write_board_search">장소 검색하기</string>
    <string name="write_board_date">약속 날짜 선택하기</string>
    <string name="write_board_time">약속 시간 선택하기</string>
    <string name="write_search">검색</string>
    <string name="write_board_search2">장소를 검색해주세요.</string>
    <string name="write">작성하기</string>
    <string name="write_title">약속 제목</string>
    <string name="write_content">약속 내용</string>
    <string name="write_member">약속 인원 수</string>
    <string name="write_member2">ex) 4</string>
    <string name="write_meeting_time">약속 시간</string>
    <string name="write_appointment_place">약속 장소</string>
    <string name="write_no">상관없음</string>
    <string name="write_yes">상관있음</string>
    <string name="onlyMale">남성만</string>
    <string name="onlyFemale">여성만</string>
    <string name="write_age">연령</string>
    <string name="write_minAge">20</string>
    <string name="write_maxAge">70</string>
    <string name="write_ageFromTo">~</string>
    <string name="write_ageFrom">살부터</string>
    <string name="write_ageTo">살까지</string>
    <string name="write_time">시</string>
    <string name="write_minute">00시 00분</string>
    <string name="write_time2">ex) 14</string>
    <string name="write_minute2">ex) 30</string>
    <string name="write_search2"> 세부내용 ex) 정문 앞에서 만나요.</string>
    <string name="write_today">0000년 00월 00일</string>
    <string name="write_middle">~</string>
    <string name="write_notToday">오늘이 아님</string>


    <!--게시글 보기-->
    <string name="read">약속 내용</string>
    <string name="read_title">약속 제목</string>
    <string name="read_writer">작성자 : </string>
    <string name="read_content">약속 내용</string>
    <string name="read_age">나이 : </string>
    <string name="read_member">약속 인원</string>
    <string name="read_gender">성별 : </string>
    <string name="read_gender2">상관없음</string>
    <string name="read_meeting_time">시간 : </string>
    <string name="read_meeting_place">장소 : </string>
    <string name="read_appointment_place_and_time">약속 장소 및 시간</string>
    <string name="read_appointment_condition">약속 조건</string>
    <string name="read_write_time">작성시간</string>
    <string name="read_title2">오늘</string>
    <string name="read_content2">오늘</string>
    <string name="read_comment">댓글</string>
    <string name="read_age2">상관없음</string>
    <string name="read_member2">현재</string>
    <string name="read_member1">(</string>
    <string name="read_member11">/</string>
    <string name="read_member111">)</string>
    <string name="read_member4">전체</string>
    <string name="read_meeting_time2">2021-10-08, 10:30</string>
    <string name="read_appointment_place2">오늘</string>
    <string name="read_writer2">오늘</string>
    <string name="read_report">신고하기</string>
    <string name="read_participate">참가하기</string>
    <string name="read_cancel">취소하기</string>
    <string name="read_delete">삭제하기</string>

    <!--검색-->
    <string name="search_all">모두 검색</string>
    <string name="search_title">제목 검색</string>
    <string name="search_content">내용 검색</string>
    <string name="search_place">장소 검색</string>
    <string name="search_time">기간 제한 설정</string>
    <string name="search_condition">참가 가능한 약속만 보기</string>
    <string name="search_time_picker">원하는 기간을 선택해주세요.</string>
    <string name="search_reset">초기화</string>
    <string name="search">검색하기</string>
    <string name="search_day_set">0000.00.00</string>
    <string name="search_time_set">00:00</string>


    <!--댓글-->
    <string name="comment_report">신고하기</string>
    <string name="comment_recomment">댓글쓰기</string>
    <string name="comment_delete">삭제하기</string>
    <string name="comment_dialog">댓글 세부 메뉴</string>

    <!--메뉴-->
    <string name="makeRecruitment">내가 잡은 약속</string>
    <string name="myRecruitmentList">내 약속 목록</string>
    <string name="setting">유저 정보 설정</string>
    <string name="logout">로그아웃/회원탈퇴</string>
    <string name="logout_btn">로그아웃</string>
    <string name="del_user_btn">회원탈퇴</string>
    <string name="about">문의하기</string>

    <!--setting-->
    <string name="setting_user_info">사용자 정보</string>
    <string name="setting_board">내가 만든 약속</string>
    <string name="setting_appointment">참가한 약속</string>
    <string name="setting_comment">댓글 단 약속</string>
    <string name="setting_appointments">약속</string>
    <string name="setting_users">계정</string>
    <string name="setting_etc">기타</string>
    <string name="setting_revise_user_info">회원 정보 수정</string>
    <string name="setting_update_user_password">비밀번호 수정</string>
    <string name="setting_user_info_agree_btn">정보 동의 설정</string>
    <string name="setting_ask">문의하기</string>
    <string name="setting_notification">알림 설정</string>
    <string name="setting_open_source">오픈소스 라이선스</string>
    <string name="setting_condition_of_service">서비스 이용약관</string>
    <string name="setting_personal_info">개인정보 처리방침</string>
    <string name="about_title">이 프로젝트의 개발자들</string>
    <string name="about_team">Team : aftermealstudio@gmail.com</string>
    <string name="about_android">Android : noion0511@gmail.com</string>
    <string name="about_ios">IOS : mrmagnet777@gmail.com</string>
    <string name="about_server">Server : qww1552@gmail.com</string>
    <string name="about_git">Git : https://github.com/Bob-Friend</string>
    <string name="setting_check_password">비밀번호를 입력해주세요.</string>
    <string name="setting_del_user">탈퇴하기</string>
    <string name="setting_year">세</string>


    <!--회원정보 수정-->
    <string name="update_user">변경하기</string>
    <string name="update_nickname">닉네임</string>
    <string name="update_password">비밀번호</string>
    <string name="update_password_check">비밀번호확인</string>
    <string name="update_gender">성별</string>
    <string name="update_birth">생년월일</string>

    <!--바텀메뉴-->
    <string name="set_list">리스트</string>
    <string name="set_map">지도</string>
    <string name="add_board">약속작성</string>
    <string name="user_info">유저정보</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>