<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.JoinActivity">

    <data>
        <variable
            name="join"
            type="com.example.bob_friend_android.view.JoinActivity" />
    </data>

    <ScrollView
        android:id="@+id/join_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_title">


            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/main_color1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"
                android:text="@string/userId" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/userId2"
                    android:layout_marginRight="20dp"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/email_check"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main_color1"
                    android:text="@string/userEmailBtn" />
            </LinearLayout>
            <TextView
                android:id="@+id/email_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"
                android:text="@string/userPassword" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/userPassword2"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/password_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"/>

            <TextView
                android:id="@+id/password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"
                android:text="@string/userPasswordCheck" />

            <EditText
                android:id="@+id/editText_password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/userPasswordCheck2"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/password_check_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1" />

            <TextView
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"
                android:text="@string/userName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/userName2"
                    android:layout_marginRight="20dp"
                    android:inputType="text" />

                <Button
                    android:id="@+id/nickname_check"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main_color1"
                    android:text="@string/userEmailBtn" />
            </LinearLayout>

            <TextView
                android:id="@+id/nickname_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"/>

            <TextView
                android:id="@+id/date_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"
                android:text="@string/userDateOfBirth" />

            <EditText
                android:id="@+id/editText_date_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/userDateOfBirth2"
                android:inputType="date"/>

            <TextView
                android:id="@+id/date_birth_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"/>

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/register_gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/third_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thirdGender" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/agree_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color1"
                android:text="@string/allAgree" />

            <CheckBox
                android:id="@+id/agree1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termsAndConditionsAgree" />

            <CheckBox
                android:id="@+id/agree2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personalInformationAgree" />

            <CheckBox
                android:id="@+id/agree3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marketingAgree" />

            <Button
                android:id="@+id/join_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:backgroundTint="@color/main_color1"
                android:text="@string/registerBtn" />
        </LinearLayout>
    </ScrollView>

</layout>