<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <data>
        <variable
            name="list"
            type="com.example.bob_friend_android.viewmodel.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:gravity="center"
            app:titleTextColor="@color/main_color1"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="회원 정보 수정에 대한 내용..회원 정보 수정에 대한 내용..회원 정보 수정에 대한 내용..회원 정보 수정에 대한 내용..회원 정보 수정에 대한 내용..회원 정보 수정에 대한 내용..회원 정보 수정에 대한 내용.."
                android:textColor="@color/main_color1"
                android:backgroundTint="@color/grey"
                android:background="@drawable/border_line"
                android:padding="10dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/update_nickname"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/update_nickname" />

                    <EditText
                        android:id="@+id/editTextTextNickname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/userName2" />
                </LinearLayout>

                <Button
                    android:id="@+id/nickname_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main_color1"
                    android:text="@string/userEmailBtn"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/update_password"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/update_password" />

                    <EditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/userPassword2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/update_password_check"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/update_password_check" />

                    <EditText
                        android:id="@+id/editTextTextPasswordCheck"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/userPasswordCheck2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/update_gender"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/update_gender"
                        android:layout_gravity="center"/>

                    <RadioGroup
                        android:id="@+id/update_gender_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/female" />

                        <RadioButton
                            android:id="@+id/third_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/thirdGender" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/update_birth"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/update_birth" />

                    <EditText
                        android:id="@+id/editTextTextBirth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="8"
                        android:maxEms="8"
                        android:inputType="textPersonName"
                        android:hint="@string/userDateOfBirth2" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/update_user_info_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_user"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>